# freecadTopoTesting

./: CMakeLists.txt  README.md  TNaming_Writeup.md  TNaming_Writeup.txt
SampleOutput/: cppCompareBrepPrim.txt  cppCompareExtrude.txt  cut_box.txt  make_output.txt  new_box.txt  orig_box.txt  output.txt  outputExtrude.txt  shapeInfos.txt  tdfShapes.txt  tdfShapesComparison.txt
src/: ArchivedRunCases.cpp  DumpDataViewer.py  FakeTopoShape.cpp  FakeTopoShape.h  FakeTopoShapeRunCases.cpp  FakeTopoShapeRunCases.h  MinimumOccTest.cpp  PreCompiled.h  ShapeDataFormatter.py  TopoNamingHelper.cpp  TopoNamingHelper.h  occPyTest.cpp
