cmake_minimum_required (VERSION 2.6)
project(occTest)
set (CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set (CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/Build)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_PATH}/lib)
#include_directories(${PROJECT_SOURCE_DIR})
include_directories("/usr/local/include/opencascade")
link_directories("/usr/local/lib")
add_executable(occTest ${CMAKE_SOURCE_DIR}/occPyTest.cpp)
target_link_libraries(occTest TKBRep TKPrim TKernel TKTopAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool)
