cmake_minimum_required (VERSION 2.6)
project(occTest)
set (CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set (CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/Build)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_PATH}/lib)
#include_directories(${PROJECT_SOURCE_DIR})
#include_directories("/usr/local/include/opencascade")
#link_directories("/usr/local/lib")
include_directories("/home/wolfie/Program/opencascade-7.0.0/inc")
link_directories("/home/wolfie/Program/opencascade-7.0.0/Build_Debug/lin64/gcc/libd")
add_executable(occTest ${CMAKE_SOURCE_DIR}/occPyTest.cpp ${CMAKE_SOURCE_DIR}/TopoNamingHelper.cpp)
set_property( TARGET occTest APPEND_STRING PROPERTY COMPILE_FLAGS -Wall)
target_link_libraries(occTest TKBRep TKPrim TKernel TKTopAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool TKFillet)

add_executable(fakeTopoShape ${CMAKE_SOURCE_DIR}/FakeTopoShape.cpp ${CMAKE_SOURCE_DIR}/TopoNamingHelper.cpp)
set_property( TARGET fakeTopoShape APPEND_STRING PROPERTY COMPILE_FLAGS -Wall)
target_link_libraries(fakeTopoShape TKBRep TKPrim TKernel TKTopAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool TKFillet)
