cmake_minimum_required (VERSION 2.6)
project(occTest)
set (FREECAD_PART_SOURCE_DIR "/home/wolfie/Program/FreeCAD_ezziey/src/Mod/Part")
set (OCC_SOURCE_DIR "/home/wolfie/Program/opencascade-7.0.0")
set (CMAKE_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
set (CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/Build)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_PATH}/lib)
#include_directories(${PROJECT_SOURCE_DIR})
#include_directories("/usr/local/include/opencascade")
#link_directories("/usr/local/lib")
include_directories(${OCC_SOURCE_DIR}/inc ${FREECAD_PART_SOURCE_DIR}/App)
link_directories(${OCC_SOURCE_DIR}/Build_Debug/lin64/gcc/libd)

#add_executable(occTest ${CMAKE_SOURCE_DIR}/occPyTest.cpp ${FREECAD_PART_SOURCE_DIR}/App/TopoNamingHelper.cpp)
#set_property( TARGET occTest APPEND_STRING PROPERTY COMPILE_FLAGS -Wall)
#target_link_libraries(occTest TKBRep TKPrim TKernel TKTopAlgo TKGeomAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool TKFillet)

#add_executable(topoShapeNaming ${CMAKE_SOURCE_DIR}/FakeTopoShapeRunCases.cpp ${FREECAD_PART_SOURCE_DIR}/App/TopoShape_Naming.cpp )
#set_property( TARGET topoShapeNaming APPEND_STRING PROPERTY COMPILE_FLAGS -Wall)
#target_link_libraries(topoShapeNaming TKBRep TKPrim TKernel TKGeomAlgo TKTopAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool TKFillet)

add_executable(MinOCC ${CMAKE_SOURCE_DIR}/MinimumOccTest.cpp ${FREECAD_PART_SOURCE_DIR}/App/TopoNamingHelper.cpp ${CMAKE_SOURCE_DIR}/FakeTopoShape.cpp)
set_property( TARGET MinOCC APPEND_STRING PROPERTY COMPILE_FLAGS -Wall)
add_definitions(-DNO_ZIPIOS)
target_link_libraries(MinOCC TKBRep TKPrim TKernel TKGeomAlgo TKTopAlgo TKMath TKBO TKG3d TKGeomBase TKCAF TKLCAF TKBool TKFillet)
